
# US-2.1: As a user, I want to select my start and destination points by either typing a building name or clicking a building on the map, so that I can plan my route with minimal effort.
# US-2.2: As a campus map user, I want my current building to be used as the starting point, so that I don’t have to manually select it.
#
# This test implements US-2.1 and US-2.2 making the implementation of an E2E test for US-2.2 redundant.

appId: com.example.myapplication
---
# Scenario 1: Type building name
# Set user location out of campus (Starbucks, Brossard)
- setLocation:
    latitude: 45.4377
    longitude: -73.47379
- launchApp:
    clearState: true
- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    point: "80%, 83%"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    text: "Search buildings or addresses..."
- waitForAnimationToEnd:
    timeout: 2000

- inputText: "Vanier"
- tapOn:
    text: "Vanier Library"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Directions"
- waitForAnimationToEnd:
    timeout: 2000

- assertVisible:
    text: "Directions"
- assertVisible:
    text: "Your position"
- assertVisible:
    text: "Vanier Library"
- assertVisible: "Walk"
- assertVisible: "Drive"
- assertVisible: "Transit"
- assertVisible: "Shuttle"

- tapOn: "Drive"
- waitForAnimationToEnd:
    timeout: 2000

- assertVisible:
    text: "Start"

# Scenario 2: Tap on a building
# Set user location to LOYOLA campus (Vanier Library)
- setLocation:
    latitude: 45.459081
    longitude: -73.638709
- launchApp:
    clearState: true
- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    text: "SGW"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    point: "50%, 47%"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Directions"
- waitForAnimationToEnd:
    timeout: 2000

- assertVisible:
    text: "Directions"
- assertVisible:
    text: "Your position"
- assertVisible:
    text: "Henry F. Hall Building"
- assertVisible: "Walk"
- assertVisible: "Drive"
- assertVisible: "Transit"
- assertVisible: "Shuttle"

- tapOn: "Drive"
- waitForAnimationToEnd:
    timeout: 2000

- assertVisible:
    text: "Start"
- waitForAnimationToEnd:
    timeout: 2000