
# US-2.6: As a campus map user, I want shuttle service routes to be displayed, so that I can efficiently use the Concordia Shuttle.
# US-2.7: As a campus map user, I want the application to determine shuttle availability based on the current time, so that I only see shuttle routes when the service is operating.
# US-2.8: As a campus map user, I want the nearest shuttle stop to be identified, so that I know where to board.
#
# This test covers both user stories 2.7 and 2.8. Implementing an e2e test for US-2.6, US-2.7 or US-2.8 would be redundant since it
# is tested through US-2.6 e2e test.

appId: com.example.myapplication
---
# Set location to LOYOLA campus (Vanier Library)
- setLocation:
    latitude: 45.459081
    longitude: -73.638709
- launchApp:
    clearState: true
- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    text: "Search buildings or addresses..."
- waitForAnimationToEnd:
    timeout: 2000

- inputText: "Hall"
- tapOn:
    text: "Henry F. Hall Building"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Directions"
- waitForAnimationToEnd:
    timeout: 2000

- assertVisible:
    text: "Directions"
- assertVisible:
    text: "Your position"
- assertVisible:
    text: "Henry F. Hall Building"
- assertVisible: "Walk"
- assertVisible: "Drive"
- assertVisible: "Transit"
- assertVisible: "Shuttle"

- tapOn: "Shuttle"
- waitForAnimationToEnd:
    timeout: 2000
- runFlow:
    when:
      visible: "No more shuttles today"
    commands:
      - assertVisible:
          text: "No more shuttles today"


- runFlow:
    when:
      visible: "Nearest stop: Loyola — Shuttle Terminal (Sherbrooke W.)"
    commands:
      - assertVisible:
          text: "Nearest stop: Loyola — Shuttle Terminal (Sherbrooke W.)"
