
# US-3.4: As a student, I want the app to automatically generate a route to my next class based on my current location and the time, so that I can reach my classroom efficiently without manual searching.

appId: com.example.myapplication
---
- launchApp:
    clearState: true
- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    text: "schedule"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    text: "Connect"
    index: 1
- waitForAnimationToEnd:
    timeout: 10000


- tapOn:
    text: "concoordinates@gmail.com"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    text: "concoordinates@gmail.com"
- waitForAnimationToEnd:
    timeout: 5000


- tapOn:
    text: "Map"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    text: "SOEN 345 Lab"
- waitForAnimationToEnd:
    timeout: 5000

- assertVisible:
    text: "Directions"
- assertVisible: "Drive"
- assertVisible: "Walk"
- assertVisible: "Transit"
- assertVisible: "Shuttle"
- assertVisible:
    text: "Your position"
- assertVisible:
    text: "Start"

- tapOn:
    text: "Start"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    text: "END TRIP"
- waitForAnimationToEnd:
    timeout: 5000
