
# US-3.2: As a student with multiple Google calendars, I want to select specific calendars as the data source for my classes so that my navigation is only based on my academic schedule and not my personal events.

appId: com.example.myapplication
---
- launchApp:
    clearState: true
- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    text: "schedule"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    text: "Connect"
    index: 1
- waitForAnimationToEnd:
    timeout: 10000

- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    text: "SKIP"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    id: "identifierId"
- waitForAnimationToEnd:
    timeout: 2000
- inputText: "concoordinates@gmail.com"
- tapOn:
    text: "NEXT"
- tapOn: "Enter your password"
- waitForAnimationToEnd:
    timeout: 2000
- inputText: "A12345678?"
- tapOn:
    text: "NEXT"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    text: "I agree"
- waitForAnimationToEnd:
    timeout: 20000
- assertVisible:
    text: "Choose a Calendar"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    text: "concoordinates@gmail.com"
- waitForAnimationToEnd:
    timeout: 10000

- assertVisible:
    text: "Schedule"
    index: 0
- assertVisible: "Prev"
- assertVisible: "Next"
- assertVisible: "Sign out"
- assertVisible:
    text: "SOEN 345 Lecture"
    index: 0
